# subagent_multi_agent_pattern

./: .env.example  README.md  langgraph.json  main.py  pyproject.toml  pytest.ini  test_main.http
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/: calendar_agent.py  email_agent.py  reflection_agent_factory.py  subagent.py
config/: ollama_config.py  prompt_config.py
guardrails/: custom_guardrail.py
openspec/archive/2026-03-26-enable-email-guardrail/: .openspec.yaml  enable_email_guardrail.md
openspec/changes/archive/2026-03-26-enable-email-guardrail/: .openspec.yaml  ARCHIVE_SUMMARY.md  tasks.md
scripts/: push_prompts.py
state/: calendar_state.py
tests/: test_supervisor_trajectory_evals.py
